--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ nuImage_dataset/
 .ipynb_checkpoints/.
 .data_che/
 iccv09Data/
+mmsegmentation/mmSeg_dataset/
+checkpoints/pspnet_r50-d8_512x1024_40k_cityscapes_20200605_003338-2966598c.pth
