🙈 Add `.history` to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ nuImage_dataset/
 iccv09Data/
 mmsegmentation/mmSeg_dataset/
 checkpoints/pspnet_r50-d8_512x1024_40k_cityscapes_20200605_003338-2966598c.pth
+
+.history
